# resvg

./: .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  _typos.toml
.github/: copyright.sh
.github/workflows/: main.yml  tagged-release.yml  viewsvg-release.yml
crates/c-api/: Cargo.toml  ResvgQt.h  lib.rs  resvg.h
crates/fontdb/: Cargo.toml
crates/fontdb/src/: lib.rs
crates/fontdb/tests/: add_fonts.rs
crates/resvg/: Cargo.toml
crates/resvg/examples/: generate_hinting_comparison.rs  minimal.rs
crates/resvg/src/: clip.rs  geom.rs  image.rs  lib.rs  main.rs  path.rs  render.rs
crates/resvg/src/filter/: composite.rs  convolve_matrix.rs  displacement_map.rs  iir_blur.rs  lighting.rs  mod.rs
crates/resvg/src/render/: text.rs
crates/resvg/tests/: gen-tests.py
crates/resvg/tests/fonts/: README.md
crates/resvg/tests/integration/: extra.rs  hinting.rs  main.rs  render.rs  render_hinted.rs
crates/resvg_vello/: Cargo.toml
crates/resvg_vello/src/: clip.rs  image.rs  lib.rs  main.rs  mask.rs  path.rs  render.rs  util.rs
crates/resvg_vello/tests/: gen-tests.py
crates/resvg_vello/tests/integration/: main.rs  render.rs
crates/usvg/: Cargo.toml
crates/usvg/codegen/: Cargo.toml  attributes.txt  main.rs
crates/usvg/src/: lib.rs  main.rs  writer.rs
crates/usvg/src/parser/: converter.rs  filter.rs  image.rs  mod.rs  options.rs  paint_server.rs  shapes.rs  switch.rs  text.rs  use_node.rs
crates/usvg/src/text/: colr.rs  flatten.rs  mod.rs  (+4 more)
crates/usvg/tests/: parser.rs  primitive_shapes.rs  text.rs  write.rs
docs/: svg2-changelog.md
tools/viewsvg/: .gitignore  main.cpp  svgview.cpp
(+10 files in other folders)
