[workspace]
members = [
    "crates/c-api",
    "crates/resvg",
    "crates/resvg_vello",
    "crates/usvg",
    "crates/usvg/codegen",
    #"tools/explorer-thumbnailer",
]
default-members = ["crates/resvg"]
resolver = "2"

[workspace.package]
license = "Apache-2.0 OR MIT"

[patch.crates-io]
kurbo = { git = "https://github.com/linebender/kurbo/", rev = "1312d43"  }